typescript-conversion initial
